@@ -41,7 +41,7 @@ class bitarray:
     def all(self) -> bool: ...
     def any(self) -> bool: ...
     def append(self, value: int) -> None: ...
-    def buffer_info(self) -> tuple: ...
+    def buffer_info(self) -> BufferInfo: ...
     def bytereverse(self,
                     start: int = ...,
                     stop: int = ...) -> None: ...
