@@ -2,6 +2,7 @@
 -------------------
   * add `util.gen_primes()`, a function to generate bitarrays in which all
     active indices are prime numbers
+  * improve `.buffer_info()` to return named tuple
   * add optional `mode` argument to `util.sum_indices()`
   * add [Dubner's conjecture](../examples/dubner.rst) (in memory of Harvey
     Dubner)
